Add .sort_index when impute salary

--- a/nba_dfs_data_merge_n_impute_2019.ipynb
+++ b/nba_dfs_data_merge_n_impute_2019.ipynb
@@ -1059,11 +1059,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T20:21:56.229113Z",
-     "start_time": "2019-08-21T20:21:53.752694Z"
+     "end_time": "2019-08-21T21:55:03.786193Z",
+     "start_time": "2019-08-21T21:55:01.349624Z"
     }
    },
    "outputs": [],
@@ -1104,7 +1104,8 @@
     "    p_df['Salary'] = [s - 50 if s % 100 != 0 else s for s in salaries]\n",
     "    return p_df\n",
     "        \n",
-    "player_merge = pd.concat([impute_player_salary(p) for p in players])"
+    "player_merge = pd.concat([impute_player_salary(p) for p in players]) \\\n",
+    "                 .sort_index()"
    ]
   },
   {
@@ -1302,11 +1303,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-21T20:32:14.955373Z",
-     "start_time": "2019-08-21T20:32:13.958806Z"
+     "end_time": "2019-08-21T21:55:17.735512Z",
+     "start_time": "2019-08-21T21:55:16.739232Z"
     }
    },
    "outputs": [],
