Add coefficients for linear regression

--- a/nba_dfs_data_eng_n_modeling_2019.ipynb
+++ b/nba_dfs_data_eng_n_modeling_2019.ipynb
@@ -1344,8 +1344,33 @@
     "    print(f\"RMSE: {np.sqrt(mean_squared_error(y, pred))}\")\n",
     "    return pred\n",
     "    \n",
-    "X = player_df[['Salary']]\n",
+    "X = player_df[player_df.Salary>3500][['Salary']]\n",
     "y = player_df.FD_Pts.values\n",
+    "pred = naive_ln_model(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-26T23:14:44.982278Z",
+     "start_time": "2019-08-26T23:14:44.955036Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_Squared: 0.5169352880881358\n",
+      "RMSE: 9.79752708699388\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = player_df[player_df.FD_Pts>0][['Salary']]\n",
+    "y = player_df[player_df.FD_Pts>0].FD_Pts.values\n",
     "pred = naive_ln_model(X, y)"
    ]
   },
@@ -1358,11 +1383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T22:48:40.174530Z",
-     "start_time": "2019-08-26T22:48:40.163140Z"
+     "end_time": "2019-08-26T23:16:42.483283Z",
+     "start_time": "2019-08-26T23:16:42.472271Z"
     }
    },
    "outputs": [
@@ -1396,19 +1421,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get record over the last n games\n",
-    "- Game Start rate\n",
-    "- Average Minutes Played\n",
-    "- Average FD_Pts\n",
-    "- Average Usg%\n",
-    "- Median eFG%"
+    "### Get Rolling Averages"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Rolling Averages"
+    "Get rolling record over the last n games\n",
+    "- Game Start rate\n",
+    "- Average Minutes Played\n",
+    "- Average FD_Pts\n",
+    "- Average Usg%\n",
+    "- Median eFG%\n",
+    "- Median TS%"
    ]
   },
   {
@@ -1583,6 +1609,14 @@
    "metadata": {},
    "source": [
     "### Get Opponent FD Pts allowed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assume Player A at position PG plays Team 1 on a November night.  \n",
+    "Get the average points that Team 1's opponent allowed at position PG before that day."
    ]
   },
   {
@@ -2123,11 +2157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T22:56:37.803729Z",
-     "start_time": "2019-08-26T22:56:37.788319Z"
+     "end_time": "2019-08-26T23:25:57.041155Z",
+     "start_time": "2019-08-26T23:25:57.023591Z"
     }
    },
    "outputs": [
@@ -2140,6 +2174,15 @@
       "Train RMSE: 1.016395812763656\n",
       "Test R_Squared: 0.5151972297418037\n",
       "Test RMSE: 1.0514063689541437\n",
+      "\n",
+      "Coefficients:\n",
+      "mean_GS_last_5_gms: 0.016668939157997782\n",
+      "mean_MP_last_5_gms: 0.03332731597689044\n",
+      "mean_USG%_last_5_gms: 0.008529171560007785\n",
+      "mean_FD_Pts_last_5_gms: 0.02701758039784474\n",
+      "Opp_Pos_FD_Pts_Allowed: -0.00264227574165706\n",
+      "Salary_adj: 0.39028578882987464\n",
+      "\n",
       "9.887304515528966\n"
      ]
     }
@@ -2155,6 +2198,12 @@
     "    pred_test = reg_model.predict(X_test)\n",
     "    print(f\"Test R_Squared: {r2_score(y_test, pred_test)}\")\n",
     "    print(f\"Test RMSE: {np.sqrt(mean_squared_error(y_test, pred_test))}\")\n",
+    "    print()\n",
+    "    print(f'Coefficients:')\n",
+    "    coefs = reg_model.coef_\n",
+    "    for i in range(len(coefs)):\n",
+    "        print(f'{list(X_train.columns)[i]}: {coefs[i]}')\n",
+    "    print()\n",
     "    return pred_test\n",
     "\n",
     "pred_test = ln_model(X_train, y_train, X_test, y_test)\n",
@@ -2246,11 +2295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T22:56:51.484668Z",
-     "start_time": "2019-08-26T22:56:47.766960Z"
+     "end_time": "2019-08-26T23:02:20.280342Z",
+     "start_time": "2019-08-26T23:02:16.475893Z"
     }
    },
    "outputs": [
@@ -2262,18 +2311,16 @@
        "   selection='cyclic', tol=0.0001, warm_start=False)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.linear_model import ElasticNet\n",
-    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "models_score = []\n",
     "\n",
